--- a/examples/nemo/eg5/Makefile
+++ b/examples/nemo/eg5/Makefile
@@ -87,9 +87,10 @@ transform: kernels
 
 # Need `-l all` to ensure line-lengths in generated code are less than the
 # standard-mandated 132 chars. Also kernel extraction does not support
-# distributed, so this has to be disabled (TODO #1992)
+# distributed, so this has to be disabled (TODO #1992), even though the
+# flag is not required for NEMO itself.
 kernels: extract_kernels.py
-	$(PSYCLONE) -nodm -l all -api "nemo" -s ./extract_kernels.py -opsy psy.f90 \
+	$(PSYCLONE) -l all -api "nemo" -s ./extract_kernels.py -opsy psy.f90 \
    ../code/tra_adv.F90
 
 $(EXTRACT_DIR)/$(LIB_NAME):
